# WebAssemblyLogistic

./: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vercel-build.sh
src/: App.css  App.tsx  index.css  utils.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
