[package]
name = "wasm"
version = "0.2.0"
edition = "2021"
authors = ["Hirose Kento <hrosekent123@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
csv = "1.1"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }